<resources>
    <string name="app_name">Figma</string>

    <string name="home">Home</string>
    <string name="all">All</string>
    <string name="pizzaheader">Pizza</string>
    <string name="beverages">Beverages</string>
    <string name="asian">Asian</string>
    <string name="addressdetails">242\u0020ST\u0020Marks\u0020Eve,\u0020Finland</string>
    <string name="title">Popular\u0020Restaurents</string>
    <string name="chienese">•\u0020Chienese\u0020•</string>
    <string name="pizza">•\u0020\u0020Pizza\u0020\u0020•</string>
    <string name="seafood">•\u0020Seafood\u0020•</string>
    <string name="fastfood">•\u0020Fastfood\u0020•</string>
    <string name="conradStar">4.6</string>
    <string name="SKStar">4.4</string>
    <string name="OnikoStar">4.0</string>
    <string name="conradTime">15\u0020min</string>
    <string name="OnikoTime">20\u0020min</string>
    <string name="SKTime">30\u0020min</string>
    <string name="BFTime">20\u0020min</string>
    <string name="conradDiscount">50%\u0020OFF</string>
    <string name="SKDiscount">40%\u0020OFF</string>
    <string name="blackfishDiscount">40%\u0020OFF</string>
    <string name="onikoDiscount">50%\u0020OFF</string>
    <string name="SkRest">SK\u0020Restro</string>
    <string name="conrad">Conrad\u0020food</string>
    <string name="oniko">Goichi\u0020Oniko</string>
    <string name="blackfish">Black\u0020Fish</string>


    <string name="foodninja">FoodNinja</string>
    <string name="sub_title">Deliver Favorite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="zero">0</string>
    <string name="space" />
    <string name="plus">+</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="continueButton">CONTINUE</string>


</resources>