<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".livedata.LiveData">
     
    
    <TextView
        android:id="@+id/zeroText"
        android:layout_centerInParent="true"
        android:text="@string/zero"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input"
        android:hint="Enter seconds for countdown"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_above="@+id/zeroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/startButton"
        android:layout_centerVertical="true"
        android:layout_marginStart="100dp"
        android:text="@string/start"
        android:layout_below="@+id/zeroText"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/stopButton"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/startButton"
        android:layout_below="@+id/zeroText"
        android:text="@string/stop"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/contButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zeroText"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:text="@string/continueButton" />
</RelativeLayout>