<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Login">


    <RelativeLayout
        android:foreground="@drawable/backdeneme"
        android:id="@+id/relative"
        app:layout_constraintBottom_toTopOf="@+id/subtitle"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_pattern"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_26sdp"
            android:src="@drawable/food" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_134sdp"
            android:fontFamily="@font/viga"
            android:gravity="center"
            android:text="@string/foodninja"
            android:textColor="#15BE77"
            android:textSize="@dimen/_30sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_alignStart="@+id/title"
            android:layout_marginTop="-5dp"
            android:layout_alignEnd="@+id/title"
            android:fontFamily="@font/inder"
            android:textStyle="bold"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/sub_title"
            android:textColor="#09051C"
            android:textSize="@dimen/_10sdp" />
    </RelativeLayout>



    <TextView
        android:id="@+id/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="-10dp"
        android:textColor="#09051C"
        android:textAlignment="center"
        android:textStyle="bold"
        />

<com.google.android.material.card.MaterialCardView
    app:strokeColor="#F4F4F4"
    app:strokeWidth="@dimen/_1sdp"
    android:id="@+id/cardMail"
    android:outlineSpotShadowColor="#5A6CEA12"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/subtitle"
    android:layout_marginTop="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_44sdp"
    android:background="@drawable/logintext"
    app:cardElevation="@dimen/_50sdp"

     >
    <EditText
        android:id="@+id/loginmail"
        android:hint="@string/email"
        android:backgroundTint="#FFFFFF"
        android:letterSpacing="0.04"
        android:gravity="center_vertical"
        android:textColorHint="#3B3B3B"
        android:alpha="0.3"
        android:paddingStart="@dimen/_20sdp"
        android:textSize="@dimen/_12sdp"
        android:paddingEnd="@dimen/_180sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        app:strokeColor="#F4F4F4"
        app:strokeWidth="@dimen/_1sdp"
        android:id="@+id/cardPassword"
        app:cardElevation="50dp"
        android:outlineSpotShadowColor="#5A6CEA12"
        app:layout_constraintStart_toStartOf="@+id/cardMail"
        app:layout_constraintEnd_toEndOf="@+id/cardMail"
        app:layout_constraintTop_toBottomOf="@+id/cardMail"
        android:layout_marginTop="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_44sdp"
        android:background="@drawable/logintext"

        >

    <EditText
        android:id="@+id/password"
        android:background="@drawable/logintext"
        android:elevation="50dp"
        android:textColorHint="#3B3B3B"
        android:letterSpacing="0.04"
        android:alpha="0.3"
        android:hint="@string/password"
        android:paddingStart="@dimen/_20sdp"
        android:textSize="@dimen/_12sdp"
        android:paddingEnd="@dimen/_170sdp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/orContinue"
        app:layout_constraintTop_toBottomOf="@+id/cardPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/or_continue_with"
        android:textSize="@dimen/_10sdp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#09051C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.card.MaterialCardView
        app:strokeColor="#F4F4F4"
        app:strokeWidth="@dimen/_1sdp"
        android:id="@+id/facecard"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_160sdp"
        android:outlineSpotShadowColor="#5A6CEA12"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardPassword"
        app:layout_constraintTop_toBottomOf="@id/orContinue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_40sdp"
            android:gravity="top"
            android:text="@string/facebook"
            android:textColor="#09051C"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_80sdp"
            android:src="@drawable/facebook" />


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        app:strokeColor="#F4F4F4"
        app:strokeWidth="@dimen/_1sdp"
        app:layout_constraintStart_toEndOf="@id/facecard"
        app:layout_constraintEnd_toEndOf="@+id/cardPassword"
        app:layout_constraintTop_toBottomOf="@id/orContinue"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:outlineSpotShadowColor="#5A6CEA12"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_50sdp"
        android:background="@drawable/loginoptions"
        android:layout_width="@dimen/_110sdp"
         >

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/google"
            android:gravity="top"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="#09051C"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_80sdp"
            android:src="@drawable/google"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facecard"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/forgot_your_password"
        android:textSize="@dimen/_12sdp"
        android:lineSpacingExtra="8sp"
        android:translationY="-3.93sp"
        android:gravity="center_horizontal|top"
        android:textColor="#53E88B"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/loginbutton"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</androidx.constraintlayout.widget.ConstraintLayout>